--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mongoose": "^8.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "nodemon": "^3.1.0"
   }
 }
