--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "description": "back",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
+    "lint": "eslint . --fix",
     "build:ui": "rm -rf dist && cd front && npm run build && cp -r dist ..",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
-  "author": "Richardo",
+  "author": "richardo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@stylistic/eslint-plugin": "^1.7.2",
     "eslint": "^9.0.0",
     "globals": "^15.0.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
